staging and production config

--- a/elohim-app/src/app/app.component.html
+++ b/elohim-app/src/app/app.component.html
@@ -10,6 +10,9 @@
     <div class="parallax-layer layer-3" data-speed="0.1"></div>
 </div>
 
+<!-- Debug bar (only shows in staging) -->
+<app-debug-bar></app-debug-bar>
+
 <!-- Components -->
 <app-hero></app-hero>
 <app-crisis></app-crisis>
