--- a/elohim-app/src/app/components/footer/footer.component.html
+++ b/elohim-app/src/app/components/footer/footer.component.html
@@ -52,5 +52,10 @@
       </div>
     </div>
     
+    <!-- Build Info -->
+    <div class="build-info">
+      <span data-cy="git-hash" class="git-hash">{{ gitHash }}</span>
+    </div>
+    
   </div>
 </footer>
