ambient observer principle

--- a/elohim-app/src/app/components/hero/hero.component.html
+++ b/elohim-app/src/app/components/hero/hero.component.html
@@ -5,6 +5,18 @@
     </div>
     <h1>Elohim Protocol</h1>
     <p class="hero-subtitle">Digital guardians for human flourishing. Technology organized around love.</p>
+    
+    <div class="hero-video">
+      <iframe 
+        width="560" 
+        height="315" 
+        src="https://www.youtube.com/embed/6g6v7ZMEAxk" 
+        title="The Elohim Protocol: Reimagining Digital Infrastructure for Human Flourishing & the Care Economy" 
+        frameborder="0" 
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+        allowfullscreen>
+      </iframe>
+    </div>
   </div>
   <div class="scroll-indicator">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
