adjustments to hero

--- a/elohim-app/src/app/components/hero/hero.component.html
+++ b/elohim-app/src/app/components/hero/hero.component.html
@@ -8,7 +8,7 @@
         <h1>Elohim Protocol</h1>
         <p class="hero-subtitle">Digital guardians for human flourishing. Technology organized around love.</p>
         <button class="listen-button" (click)="toggleVideo()">
-          Listen to Learn More
+          Play to Learn
         </button>
       </div>
       
@@ -23,13 +23,13 @@
             allowfullscreen>
           </iframe>
         </div>
-        <p class="video-subtitle">Video overview (~7min)</p>
+        <p class="video-subtitle">Summary (~7min)</p>
         <div class="video-buttons">
           <button class="back-to-logo-button" (click)="hideVideo()">
             Back
           </button>
           <button class="deep-dive-button" (click)="toggleDeepDive()">
-            Listen
+            Deep Dive
           </button>
         </div>
       </div>
@@ -51,7 +51,7 @@
             Back
           </button>
           <button class="intro-video-button" (click)="toggleVideo()">
-            Watch
+            Summary
           </button>
         </div>
       </div>
