--- a/elohim-app/src/app/components/footer/footer.component.html
+++ b/elohim-app/src/app/components/footer/footer.component.html
@@ -9,6 +9,8 @@
     <!-- Project Info & Mission Section -->
     <div class="project-mission-section">
       <div class="project-links">
+        <a routerLink="/docs" class="docs-link">📚 Living Documentation</a>
+        <span class="separator">|</span>
         <span>Follow the Project</span>
         <a href="https://github.com/ethosengine/elohim" class="social-icon" target="_blank" rel="noopener noreferrer">
           <i class="fab fa-github"></i>
