--- a/elohim-app/src/app/lamad/components/epic-viewer/epic-viewer.component.html
+++ b/elohim-app/src/app/lamad/components/epic-viewer/epic-viewer.component.html
@@ -2,7 +2,7 @@
   <!-- Epic Header -->
   <div class="epic-header">
     <div class="breadcrumb">
-      <a routerLink="/docs">Home</a> / <span>Epic</span>
+      <a routerLink="/lamad">Home</a> / <span>Epic</span>
     </div>
 
     <h1 class="epic-title">{{ epic.title }}</h1>
@@ -64,5 +64,5 @@
 <div class="not-found" *ngIf="!epic">
   <h2>Epic Not Found</h2>
   <p>The requested epic could not be found.</p>
-  <a routerLink="/docs" class="back-button">← Back to Documentation</a>
+  <a routerLink="/lamad" class="back-button">← Back to Documentation</a>
 </div>
