--- a/elohim-app/src/app/lamad/components/module-viewer/module-viewer.component.html
+++ b/elohim-app/src/app/lamad/components/module-viewer/module-viewer.component.html
@@ -1,7 +1,7 @@
 <div class="module-viewer">
   <div class="module-header">
     <div class="breadcrumb">
-      <a routerLink="/docs">Docs Home</a> / <span>Learning Module</span>
+      <a routerLink="/lamad">Docs Home</a> / <span>Learning Module</span>
     </div>
     <h1 class="module-title">{{ moduleName }}</h1>
     <div class="module-meta" *ngIf="epic && feature">
